[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.0"
bson = "2.0.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]
